--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </p>
           </div>
         </div>
-        <div class="hr-hero divider" style="margin: 16px 0px"></div>
+        <!-- <div class="hr-hero divider" style="margin: 16px 0px"></div>
         <div class="session-counter-hero">
           <h3>Challenge starting in</h3>
           <div class="session-counter-inner m-0">
@@ -104,7 +104,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
       <div class="video-section">
@@ -1066,14 +1066,14 @@
           </div>
         </div>
         <div class="divider mt-40"></div>
-        <div class="testimonial-heading-mobile mt-40">
+        <div class="testimonial-heading-mobile">
           <h2 class="whats-say-heading">What People Are Saying?</h2>
           <p class="whats-say-subheading">
             205,988+ people have already completed The Ultimate Health
             Challenge
           </p>
         </div>
-        <div id="testimonials" class="testimonial-div mt-40">
+        <div id="testimonials" class="testimonial-div">
           <div class="testimonial-heading">
             <h2 class="whats-say-heading">What People Are Saying?</h2>
             <p class="whats-say-subheading">
@@ -1081,7 +1081,7 @@
               Challenge
             </p>
           </div>
-          <div class="testimonial-main mt-40">
+          <div class="testimonial-main">
             <div class="d-flex gap-30">
               <div class="highlighted-testimonials">
                 <div class="highlighted-testimonials-inner">
@@ -2553,13 +2553,13 @@
       <form id="scholarshipForm">
         <div>
           <label class="scholarshipFormLabel" for="name">Name</label>
-          <input class="scholarshipFormInput" type="text" id="name" placeholder="Type name.." required />
+          <input class="scholarshipFormInput" type="text" id="name" placeholder="Enter your name" required />
         </div>
         <div class="d-flex flex-responsive gap-10">
           <div class="width-responsive">
-            <label class="scholarshipFormLabel" for="mobile">Mobile Number</label>
+            <label class="scholarshipFormLabel" for="mobile">WhatsApp Number</label>
             <div class="mt-5">
-              <input class="scholarshipFormInput" type="tel" id="phone" name="phone" placeholder="Type mobile no*"
+              <input class="scholarshipFormInput" type="tel" id="phone" name="phone" placeholder="Enter WhatsApp No.*"
                 required />
             </div>
           </div>
