--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </div>
                 <div class="ws-iconbox-text">
                   <h4>Contribution</h4>
-                  <p>₹990 - ₹2990</p>
+                  <p><span class="inr">₹</span>990 - <span class="inr">₹</span>2990</p>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -1859,7 +1859,7 @@
           <div class="scholarship-card-content">
             <h4>Because everyone deserves a chance to heal</h4>
             <p>
-              Join our wellness workshops for just ₹490 instead of ₹990.
+              Join our wellness workshops for just <span class="inr">₹</span>490 instead of <span class="inr">₹</span>990.
               Apply now to avail this offer
             </p>
             <button id="openModalBtn" class="open-modal-btn">
@@ -2410,19 +2410,19 @@
                 <div class="radio-group">
                   <label>
                     <input type="radio" name="amount" value="990" />
-                    <span>₹990</span>
+                    <span><span class="inr">₹</span>990</span>
                   </label>
                   <label>
                     <input type="radio" name="amount" value="1490" />
-                    <span>₹1490</span>
+                    <span><span class="inr">₹</span>1490</span>
                   </label>
                   <label>
                     <input type="radio" name="amount" value="1990" checked />
-                    <span>₹1990</span>
+                    <span><span class="inr">₹</span>1990</span>
                   </label>
                   <label>
                     <input type="radio" name="amount" value="2990" />
-                    <span>₹2990</span>
+                    <span><span class="inr">₹</span>2990</span>
                   </label>
                 </div>
                 <div class="terms">
@@ -2476,7 +2476,7 @@
                   style="color: transparent"
                   src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/rupee-sm.svg" />
               </div>
-              <span>Contribution: ₹990 - ₹2990</span>
+              <span>Contribution: <span class="inr">₹</span>990 - <span class="inr">₹</span>2990</span>
             </li>
           </ul>
           <a class="sidebar-register-now" href="#register-now-form"><span class="sidebar-register-text">Register
@@ -2592,15 +2592,15 @@
           <div class="scholarship-amount-options">
             <label>
               <input type="radio" name="scholarship-amount" value="490" required />
-              <span>₹490</span>
+              <span><span class="inr">₹</span>490</span>
             </label>
             <label>
               <input type="radio" name="scholarship-amount" value="790" required checked />
-              <span>₹790</span>
+              <span><span class="inr">₹</span>790</span>
             </label>
             <label>
               <input type="radio" name="scholarship-amount" value="990" required />
-              <span>₹990</span>
+              <span><span class="inr">₹</span>990</span>
             </label>
           </div>
           <div class="scholarship-terms-parent">
