--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                 src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg" /></a>
           </div>
         </div>
-        <div class="divider mt-40"></div>
+        <!-- <div class="divider mt-40"></div> -->
         <div class="mt-40">
           <picture class="dishes-recipes">
             <!-- Mobile image -->
@@ -620,7 +620,7 @@
           </picture>
           <!-- <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/few-dishes-we-will-make.webp"> -->
         </div>
-        <div class="divider mt-40"></div>
+        <!-- <div class="divider mt-40"></div> -->
         <div class="mt-40">
           <h2 class="whats-include-heading">Curriculum For The 21 Days</h2>
           <div class="taTabs">
@@ -1860,10 +1860,10 @@
             <h4>Because everyone deserves a chance to heal</h4>
             <p>
               Join our wellness workshops for just <span class="inr">₹</span>490 instead of <span class="inr">₹</span>990.
-              Apply now to avail this offer
+              Apply now to avail this offer.
             </p>
             <button id="openModalBtn" class="open-modal-btn">
-              Apply for scholarship
+              Apply for a scholarship
             </button>
           </div>
           <div class="scholarship-card-image-parent">
@@ -2426,7 +2426,7 @@
                   </label>
                 </div>
                 <div class="terms">
-                  <input class="custom-checkbox" type="checkbox" id="terms" />
+                  <input class="custom-checkbox" type="checkbox" id="terms" checked />
                   <label for="terms">
                     I agree and accept the
                     <a class="tandc" target="_blank" href="https://satvicmovement.org/terms-of-services">terms and
@@ -2535,6 +2535,8 @@
       <div class="footer-ul">
         <span>&copy; 2025 Satvic Movement </span> <span>|</span>
         <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/privacy-policy">Privacy Policy</a>
+        <span>|</span>
+        <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/terms-of-services">Terms & Conditions</a>
       </div>
     </div>
   </footer>
