--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -413,6 +413,8 @@
             href="https://satvicmovement.org/privacy-policy"
             >Privacy Policy</a
           >
+          <span>|</span>
+          <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/terms-of-services">Terms & Conditions</a>
         </div>
       </div>
     </footer>
