--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -406,15 +406,22 @@
           />
         </a>
         <div class="ty-footer-ul">
-          <span>&copy; 2025 Satvic Movement </span> <span>|</span>
-          <a
-            class="privacy-policy"
-            target="_blank"
-            href="https://satvicmovement.org/privacy-policy"
-            >Privacy Policy</a
-          >
-          <span>|</span>
-          <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/terms-of-services">Terms & Conditions</a>
+          <span>&copy; 2025 Satvic Movement </span> <span class="sm-hidden">|</span>
+          <div>
+            <a
+              class="privacy-policy"
+              target="_blank"
+              href="https://satvicmovement.org/privacy-policy"
+              >Privacy Policy</a
+            >
+            <span>|</span>
+            <a
+              class="privacy-policy"
+              target="_blank"
+              href="https://satvicmovement.org/terms-of-services"
+              >Terms & Conditions</a
+            >
+          </div>
         </div>
       </div>
     </footer>
