--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
       <div class="first-col content">
         <!-- Challenge starting in -->
         <div class="session-counter-home">
-          <h3>Challenge starting in</h3>
+          <h3>Challenge Starting In</h3>
           <div class="session-counter m-0">
-            <h4>Challenge starting in</h4>
+            <h4>Challenge Starting In</h4>
             <div class="counter-card-container">
               <div class="counter-card">
                 <h6 id="home-days">02</h6>
@@ -2135,7 +2135,7 @@
               </div>
               <div>
                 <p class="not-for-items-text text-center">
-                  Those not serious about their health
+                  Those not serious <br/> about their health
                 </p>
               </div>
             </div>
@@ -2334,14 +2334,14 @@
               <div class="form-input-container w-full d-flex flex-responsive gap-20">
                 <div class="width-responsive">
                   <input class="form-input" type="text" placeholder="Name*" required />
-                  <div class="form-error">Please enter name</div>
+                  <!-- <div class="form-error">Please enter name</div> -->
                 </div>
                 <div class="width-responsive phone-input">
                   <input class="w-full form-input" type="tel" id="phone" name="phone" placeholder="WhatsApp Number*"
                     required />
-                  <div class="form-error">
+                  <!-- <div class="form-error">
                     Please enter valid WhatsApp Number
-                  </div>
+                  </div> -->
                 </div>
                 <!-- <div class="width-responsive">
                     <input
@@ -2524,7 +2524,7 @@
   <section class="uhc-mobile">
     <div class="uhc-mobile-text">
       <h5>Ultimate Health Challenge</h5>
-      <p>Reach your peak health in 21 Days</p>
+      <p>Reach your peak health in 21 days</p>
     </div>
     <a href="#register-now-form" class="uhc-mobile-button">Register</a>
   </section>
@@ -2533,10 +2533,12 @@
       <img class="logo-footer"
         src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/sm-footer-logo.svg" />
       <div class="footer-ul">
-        <span>&copy; 2025 Satvic Movement </span> <span>|</span>
+        <span>&copy; 2025 Satvic Movement </span> <span class="sm-hidden">|</span>
+       <div>
         <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/privacy-policy">Privacy Policy</a>
         <span>|</span>
         <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/terms-of-services">Terms & Conditions</a>
+       </div>
       </div>
     </div>
   </footer>
