--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                       </p>
                       <p>
                         <span class="pr-info-title">Relaxation</span>
-                        <span class="pr-info-details">- Guided Meditation</span>
+                        <span class="pr-info-details">- Meditation</span>
                       </p>
                     </div>
                   </div>
@@ -748,7 +748,7 @@
                       </p>
                       <p>
                         <span class="pr-info-title">Relaxation</span>
-                        <span class="pr-info-details">- Guided Meditation</span>
+                        <span class="pr-info-details">- Meditation</span>
                       </p>
                     </div>
                   </div>
@@ -768,7 +768,7 @@
                       </p>
                       <p>
                         <span class="pr-info-title">Relaxation</span>
-                        <span class="pr-info-details">- Guided Meditation</span>
+                        <span class="pr-info-details">- Meditation</span>
                       </p>
                     </div>
                   </div>
@@ -1016,7 +1016,7 @@
                       </p>
                       <p>
                         <span class="pr-info-title">Relaxation</span>
-                        <span class="pr-info-details">- Guided Meditation</span>
+                        <span class="pr-info-details">- Meditation</span>
                       </p>
                     </div>
                   </div>
