added svg image directly to workshop included section

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -359,16 +359,16 @@
             <div class="step-content">
               <div class="ty-card">
                 <h3>We Have A Message For You</h3>
-                <video
-                  autoplay
-                  loop
-                  muted
+                <iframe
+                  src="https://www.youtube.com/embed/fhqepO9J7sE?si=6eeaOh3jqE_iSyPo?autoplay=1&mute=1"
                   class="ty-video"
-                  src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/videos/thank-you.mp4"
-                  controls
+                  allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+                  frameborder="0"
+                  width="640"
+                  height="360"
                 >
-                  Your browser does not support the video tag.
-                </video>
+                </iframe>
               </div>
             </div>
           </div>
@@ -406,7 +406,8 @@
           />
         </a>
         <div class="ty-footer-ul">
-          <span>&copy; 2025 Satvic Movement </span> <span class="sm-hidden">|</span>
+          <span>&copy; 2025 Satvic Movement </span>
+          <span class="sm-hidden">|</span>
           <div>
             <a
               class="privacy-policy"
