reduced margin of section on phone

--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
             </ol>
           </div>
         </div> -->
-        <!-- <div class="divider mt-40"></div> -->
+        <!-- <div class="divider mt-responsive"></div> -->
         <!-- what's included -->
-        <div class="include-div mt-40">
+        <div class="include-div mt-responsive">
           <div>
             <h2 class="whats-include-heading">Whats Included?</h2>
           </div>
@@ -483,8 +483,8 @@
             </div>
           </div>
         </div>
-        <div class="divider mt-40"></div>
-        <div id="benefits" class="benefits mt-40 mb-40">
+        <div class="divider mt-responsive"></div>
+        <div id="benefits" class="benefits mt-responsive mb-40">
           <div class="text-center">
             <h2 class="whats-include-heading mb-0">Benefits You Will Gain</h2>
             <p class="benefits-subheading">by taking this challenge</p>
@@ -552,8 +552,8 @@
             </div>
           </div>
         </div>
-        <div class="divider mt-40"></div>
-        <div class="mt-40">
+        <div class="divider mt-responsive"></div>
+        <div class="mt-responsive">
           <div>
             <h2 class="whats-include-heading">
               What Are The 7 Habits I Will Learn?
@@ -651,8 +651,8 @@
                 src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg" /></a>
           </div>
         </div>
-        <!-- <div class="divider mt-40"></div> -->
-        <div class="mt-40">
+        <!-- <div class="divider mt-responsive"></div> -->
+        <div class="mt-responsive">
           <picture class="dishes-recipes">
             <!-- Mobile image -->
             <source srcset="
@@ -669,8 +669,8 @@
           </picture>
           <!-- <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/few-dishes-we-will-make.webp"> -->
         </div>
-        <!-- <div class="divider mt-40"></div> -->
-        <div class="mt-40">
+        <!-- <div class="divider mt-responsive"></div> -->
+        <div class="mt-responsive">
           <h2 class="whats-include-heading">Curriculum For The 21 Days</h2>
           <div class="taTabs">
             <ul class="taTabs__navWap">
@@ -1114,8 +1114,8 @@
             </div>
           </div>
         </div>
-        <div class="divider mt-40"></div>
-        <div class="testimonial-heading-mobile">
+        <div class="divider mt-responsive"></div>
+        <div class="testimonial-heading-mobile mt-responsive">
           <h2 class="whats-say-heading">What People Are Saying?</h2>
           <p class="whats-say-subheading">
             205,988+ people have already completed The Ultimate Health
@@ -1902,9 +1902,9 @@
             </div>
           </div>
         </div>
-        <!-- <div class="divider mt-40"></div> -->
+        <!-- <div class="divider mt-responsive"></div> -->
         <!-- Scholorship Card Section -->
-        <div class="scholarship-card mt-40">
+        <div class="scholarship-card mt-responsive">
           <div class="scholarship-card-content">
             <h4>Because everyone deserves a chance to heal</h4>
             <p>
@@ -1923,8 +1923,8 @@
           </div>
         </div>
 
-        <!-- <div class="divider mt-40"></div> -->
-        <div class="mt-40">
+        <!-- <div class="divider mt-responsive"></div> -->
+        <div class="mt-responsive">
           <div class="who-is-for">
             <div>
               <h4 class="who-is-heading">Who Is This For?</h4>
@@ -2086,8 +2086,8 @@
             </div>
           </div>
         </div>
-        <div class="divider mt-40"></div>
-        <div class="workshop-for-not-all mt-40">
+        <div class="divider mt-responsive"></div>
+        <div class="workshop-for-not-all mt-responsive">
           <div>
             <h4 class="workshop-not-for">
               This Workshop Is <span class="not-text">Not</span> For:
@@ -2191,13 +2191,13 @@
             </div>
           </div>
         </div>
-        <div class="divider mt-40"></div>
-        <div class="mt-40 subah-image-div">
+        <div class="divider mt-responsive"></div>
+        <div class="mt-responsive subah-image-div">
           <img class="subah-and-harsh"
             src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-and-harsh.jpg"
             alt="subhah-harsh-image" />
         </div>
-        <div id="faqs" class="mt-40">
+        <div id="faqs" class="mt-responsive">
           <h4 class="faq-heading">FAQs</h4>
           <div class="qna" itemscope itemtype="https://schema.org/FAQPage">
             <div class="qna__items">
@@ -2312,8 +2312,8 @@
               <button class="load-more">Load More</button>
             </div>
           </div>
-          <div class="divider mt-40"></div>
-          <div id="hosts" class="mt-40">
+          <div class="divider mt-responsive"></div>
+          <div id="hosts" class="mt-responsive">
             <h4 class="about-the-host">About The Hosts</h4>
             <div class="wrapper about-host-div gap-20">
               <div class="card host-details">
@@ -2381,7 +2381,7 @@
               </div>
             </div>
           </div>
-          <div id="register-now-form" class="register-box mt-40">
+          <div id="register-now-form" class="register-box mt-responsive">
             <h4 class="register-now-heading">Register Now</h4>
             <p class="register-now-text-subheading text-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
