--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/1-hour-recorded-session-every-morning.svg" /> -->
                 </div>
                 <div>
-                  <h5>1 Hour Recorded Session Every Morning</h5>
+                  <h5>1 Hour Recorded Session <br class="workshop-included-br">Every Morning</h5>
                   <p>
                     Every session will be a fresh, inspiring, power packed
                     experience including deep knowledge, experiential
@@ -472,7 +472,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/handwritten-notes-and-q&a’s-for-every-session.svg" /> -->
                 </div>
                 <div>
-                  <h5>Handwritten Notes and Q&A’s For Every Session</h5>
+                  <h5>Handwritten Notes and <br class="workshop-included-br">Q&A’s For Every Session</h5>
                   <p>
                     On our app, you will find detailed notes for each session,
                     hundreds of commonly asked questions & answers and
