--- a/index.html
+++ b/index.html
@@ -2645,6 +2645,18 @@
     </div>
   </div>
 </body>
+<!-- Mac Test -->
+<!-- <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    console.log("Platform", navigator.platform.indexOf("Win"));
+      if (navigator.platform.indexOf("Win") > -1) {
+          document.body.classList.add("mac");
+          console.log("Platform", navigator.platform.indexOf("Mac"));
+          
+      }
+  });
+</script> -->
+
 <!-- JQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- Intl-Tel-Input -->
