fixed UI issues

--- a/index.html
+++ b/index.html
@@ -2553,7 +2553,7 @@
         src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/sm-footer-logo.svg" />
       <div class="footer-ul">
         <span>&copy; 2025 Satvic Movement </span> <span class="sm-hidden">|</span>
-        <div>
+        <div class="d-flex align-item-center gap-10">
           <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/privacy-policy">Privacy Policy</a>
           <span>|</span>
           <a class="privacy-policy" target="_blank" href="https://satvicmovement.org/terms-of-services">Terms &
