--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -408,7 +408,7 @@
         <div class="ty-footer-ul">
           <span>&copy; 2025 Satvic Movement </span>
           <span class="sm-hidden">|</span>
-          <div>
+          <div class="d-flex align-item-center gap-10">
             <a
               class="privacy-policy"
               target="_blank"
